tests/error/linear_errors/tuple_moved_parent_use.err
Error: Copy violation (at $FILE:13:11)
   | 
11 |     t = (qubit(), 100)
12 |     use(t[0])
13 |     return t
   |            ^ Variable `t` with non-copyable type `(qubit, int)` cannot be
   |              returned ...

Note:
   | 
11 |     t = (qubit(), 100)
12 |     use(t[0])
   |         ---- ... since the member `t[0]` with non-copyable type `qubit`
   |              was already consumed here

Guppy compilation failed due to 1 previous error
